@@ -593,7 +593,7 @@ static void ask_number_question(long numbermin, long numbermax, long answer_def,
 static void get_makefile_vars(long *nd, long *numopt,
                        bool *DEBUG, bool *DEBUGGER, bool *PROFIL,
                        long *THREADTYPE, 
-                       long *COMPILER, bool *STATIC, bool *TEST, bool *M32){
+                       long *COMPILER, bool *STATIC, bool *TEST, bool *M32, bool *SANITIZE){
   bool ESCFLAG,ENTERFLAG,ERRORFLAG;
   long nd_def,cnt,COMPILER_def,THREADTYPE_def;
 
@@ -656,6 +656,9 @@ static void get_makefile_vars(long *nd, long *numopt,
   ask_yesno_question(TRUE, "-DNDEBUG", "ASSERTIONS",
                                          "  n. no\n"
                                          "  y. yes",DEBUG);
+  ask_yesno_question(FALSE, "-fsanitize", "SANITIZATION",
+                                         "  n. no\n"
+                                         "  y. yes",SANITIZE);
   ask_yesno_question(FALSE,"-g", "DEBUGGING SYMBOLS",
                                          "  n. no\n"
                                          "  y. yes",DEBUGGER);
@@ -689,7 +692,7 @@ static void get_makefile_vars(long *nd, long *numopt,
 static void output_makefileheader(FILE *scriptfile_applyconfig, long nd, long numopt,
                            bool DEBUG, bool DEBUGGER, bool PROFIL,
                            long THREADTYPE, 
-                           long COMPILER, bool STATIC, bool TEST, bool M32){
+                           long COMPILER, bool STATIC, bool TEST, bool M32, bool SANITIZE){
   fprintf(scriptfile_applyconfig,"(\n");
   fprintf(scriptfile_applyconfig,"  printf \"#####################################################################\\n\"\n");
   fprintf(scriptfile_applyconfig,"  printf \"## This makefile header has been automatically generated by        ##\\n\"\n");
@@ -720,9 +723,11 @@ static void output_makefileheader(FILE *scriptfile_applyconfig, long nd, long nu
   if (COMPILER==CO_MPICC) fprintf(scriptfile_applyconfig, " -DDISTMPI");
   if (PROFIL) fprintf(scriptfile_applyconfig," -pg");
   if (DEBUGGER) fprintf(scriptfile_applyconfig," -g");
+  if (DEBUGGER && (COMPILER==CO_GCC || COMPILER==CO_MPICC)) fprintf(scriptfile_applyconfig," -fno-omit-frame-pointer"); 
   if (!DEBUG) fprintf(scriptfile_applyconfig," -DNDEBUG");
   if (TEST) fprintf(scriptfile_applyconfig," -DTEST");
   if (M32) fprintf(scriptfile_applyconfig," -m32 -DM32");
+  if (SANITIZE) fprintf(scriptfile_applyconfig," -fsanitize=address -fsanitize=undefined -fsanitize=bool -fsanitize=integer-divide-by-zero -fsanitize=null -fsanitize=vla-bound -fsanitize=bounds -fsanitize=signed-integer-overflow");
 
   if (getlogin()!=NULL){    
     char hostname[1024];
@@ -758,10 +763,12 @@ static void output_makefileheader(FILE *scriptfile_applyconfig, long nd, long nu
   }
   if (STATIC) fprintf(scriptfile_applyconfig," -static");
   if (DEBUGGER) fprintf(scriptfile_applyconfig," -g");
+  if (DEBUGGER && (COMPILER==CO_GCC || COMPILER==CO_MPICC)) fprintf(scriptfile_applyconfig," -fno-omit-frame-pointer"); 
   if (PROFIL) fprintf(scriptfile_applyconfig," -pg");
   if (!DEBUG) fprintf(scriptfile_applyconfig," -DNDEBUG");
   if (TEST) fprintf(scriptfile_applyconfig," -DTEST");
   if (M32) fprintf(scriptfile_applyconfig," -m32 -DM32");
+  if (SANITIZE) fprintf(scriptfile_applyconfig," -fsanitize=address -fsanitize=undefined -fsanitize=bool -fsanitize=integer-divide-by-zero -fsanitize=null -fsanitize=vla-bound -fsanitize=bounds -fsanitize=signed-integer-overflow");
   fprintf(scriptfile_applyconfig,"\\n\"\n");
   fprintf(scriptfile_applyconfig,"  printf \"\\n\"\n");
   fprintf(scriptfile_applyconfig,"  printf \"#####################################################################\\n\"\n");
@@ -795,7 +802,7 @@ static void output_makefileheader(FILE *scriptfile_applyconfig, long nd, long nu
 
 int main(){
   long nd,numopt;
-  bool DEBUG,DEBUGGER,PROFIL,STATIC,TEST,M32;
+  bool DEBUG,DEBUGGER,PROFIL,STATIC,TEST,M32,SANITIZE;
   long THREADTYPE;
   long COMPILER;
   FILE *scriptfile_applyconfig;
@@ -808,11 +815,11 @@ int main(){
   fprintf(scriptfile_removeproprietary,"#!/bin/sh\n");
 
   get_makefile_vars(&nd,&numopt,&DEBUG,&DEBUGGER,&PROFIL,
-                    &THREADTYPE,&COMPILER,&STATIC,&TEST,&M32);
+                    &THREADTYPE,&COMPILER,&STATIC,&TEST,&M32,&SANITIZE);
   strcpy(dirname,"../.");
   process_config_files(scriptfile_applyconfig,scriptfile_removeproprietary,dirname);    
   output_makefileheader(scriptfile_applyconfig,nd,numopt,DEBUG,DEBUGGER,PROFIL,
-                     THREADTYPE,COMPILER,STATIC,TEST,M32);
+                     THREADTYPE,COMPILER,STATIC,TEST,M32,SANITIZE);
 
   fclose(scriptfile_applyconfig);
   fclose(scriptfile_removeproprietary);
